--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
-        <title>CyberGarde | Protecting your buisness</title>
+        <title>CYBERGARDE | PROTECTING YOUR BUISNESS</title>
     </head>
     <body>
 
@@ -69,7 +69,7 @@
                 <i class="feature-box__icon icon-basic-lock"></i>
                 <h3 class="heading-tertiary u-margin-bottom-small">Pci</h3>
                 <p class="feature-box__text">
-                  We help your business comply with the latest Paymeny Card Industry standards to help you maintain a secure network that protects cardholder data, while restricting access to the  ost sensitive information.
+                  We help your business comply with the latest Payment Card Industry standards to help you maintain a secure network that protects cardholder data, while restricting access to the most sensitive information.
                 </p>
               </div>
             </div>
@@ -140,7 +140,7 @@
         <div class="row">
           <div class="footer__copyright-box">
             <div class="footer__copyright-text u-center-text">
-              &copy; Copyright 2017
+              &copy; Copyright 2018
             </div>
           </div>
         </div>
